--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+body{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 .container{
     display: flex;
     flex-direction: column;
@@ -46,4 +50,28 @@ p{
     font-size: 30px ;
     text-align: center;
     margin: 15px;
+}
+.info-card{
+    display: flex;
+    align-items: center;
+    margin: 30px;
+}
+.container-info{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0;
+}
+.container-info p{
+    margin: 0;
+}
+.color-info{
+    width: 50px;
+    height: 50px;
+    margin: 20px;
+    border-radius: 50%;
+    border: 30px solid black;
+    border-bottom-width: 0px;
+    border-top-width: 0px;
+    border-right-width: 0px;
 }
